# kona-take-home

./: .env  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
api/: db_client.py  fetch.py  index.py  ingest.py
app/: page.tsx
